<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">至信评</string>
    <string name="id_txt_hint">用户名</string>
    <string name="pwd_txt_hint">密码</string>
    <string name="login_btn_text">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="register">注册</string>
    <string name="logining">正在登录</string>

    <string name="uncommit">未提交</string>
    <string name="auditing">审核中</string>
    <string name="notpass">未通过</string>
    <string name="pass">通过</string>
    <string name="notice_detail">详情</string>

    <string name="system_name">至信评估系统</string>

    <string name="notice_content">"暂无公告"</string>

    <!--首页-->
    <string name="home_fragment_nosubmit">未提交</string>
    <string name="home_fragment_submited">已提交</string>
    <string name="home_fragment_evaluation">评估</string>
    <string name="home_fragment_kefu">客服</string>
    <string name="home_fragment_setting">我</string>

    <!--我的-->
    <string name="setting_mine_info">个人资料</string>
    <string name="setting_mine_update">检查新版本</string>
    <string name="setting_mine_phone">客服电话</string>
    <string name="setting_mine_about">关于</string>
    <string name="setting_mine_logout">账号退出</string>

    <!--列表-->
    <string name="list_item_number">单号: </string>
    <string name="list_item_normal_number">正式评估单号:</string>
    <string name="list_item_time">创建时间: </string>
    <string name="no_carbillid">暂无单号</string>
    <string name="list_item_price">评估价格: </string>
    <string name="list_item_leaseTerm">租赁期限: </string>
    <string name="list_item_residualPrice">残值价格: </string>
    <string name="list_item_notpass_time">退回时间: </string>
    <string name="status_bill_progress">审核进度:</string>

    <!--评估 -->
    <string name="evalution_query_vin">查询车况号</string>
    <string name="evalution_pre">预评估</string>
    <string name="evalution_residual">残值评估</string>
    <string name="evalution_start">评估</string>
    <string name="evalution_submit_tips">%1$s的%2$s没有拍照，请拍照</string>

    <string name="evalution_rules">拒评规则</string>
    <string name="evalution_takephone">拍照手册</string>


    <string name="reason_webview">退回原因</string>
    <string name="class_registration">登记证</string>
    <string name="class_driving_license">行驶证</string>
    <string name="class_vehicle_nameplate">车辆铭牌</string>
    <string name="class_car_body">车身外观</string>
    <string name="class_car_frame">车骨架</string>
    <string name="class_vehicle_interior">车辆内饰</string>
    <string name="class_difference_supplement">差异补充 </string>
    <string name="class_original_car_insurancet">原车保险</string>


    <string name="create_carbill">创建评估单据</string>
    <string name="add_picture">添加照片</string>


    <string name="cancel">取消</string>
    <string name="gallery">相册</string>
    <string name="take_again">重拍</string>
    <string name="take_next">拍下一张</string>
    <string name="complete">完成</string>


    <string name="carbill_result">订单结果</string>
    <string name="bill_count">共有%1$d单</string>


    <!--权限-->
    <string name="permission_settings">权限设置</string>
    <string name="permission_tips_description">欢迎来到至信评,为确保所有功能正常使用,请开启以下权限,你可点击重置按钮来开启权限：</string>
    <string name="permission_reset">重            置</string>


    <string name="already_bottom">已经到底了</string>
    <string name="load_fail">网络异常</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="no_data_online">没有数据</string>
    <string name="no_data_tips">亲,你没有本地评估单,点击去评估</string>
    <string name="no_network">没有网络,请检查网络</string>
    <string name="loading">加载中</string>


    <!--状态-->
    <string name="status_cabillid">评估单号:</string>
    <string name="status_bill_status">订单状态:</string>
    <string name="status_time">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间:</string>
    <string name="status_mark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>
    <string name="status_apply_all_opinion">全部意见:</string>

    <string name="evaluation_submit_tips">正在后台上传,稍后请到审核中查看！</string>
    <string name="preevaluation_submit_tips">正在后台上传,稍后请到进度列表中查看！</string>


    <string name="search_title">搜&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;索</string>
    <string name="preview_title">预览图片</string>


    <string name="login_input_account_error">请输入账号</string>
    <string name="login_input_password_error">请输入密码</string>
    <string name="login_error">登录失败</string>
    <string name="evaluation_input_pre_price">请输入预售价格</string>
    <string name="please_select_evaluation_select_date">请选择一个租赁期限!</string>
    <string name="camera_busy_now">其他应用正在使用相机,请先关闭!</string>

    <string name="upgrade_desc">检查到新版本%1$s,请升级!</string>
    <string name="upgrade_title">版本升级</string>
    <string name="quit_title">确定退出?</string>
    <string name="upgrade_ok">"确定"</string>
    <string name="upgrade_cancle">"取消"</string>
    <string name="upgrading">"检查新版本..."</string>
    <string name="upgrade_new">"亲,已是最新版本"</string>

    <string name="mine_info">"我的信息"</string>
    <string name="mine_display_name">"名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;字:"</string>
    <string name="mine_belong_company">"所属公司:"</string>

    <string name="mine_about">"关于我们"</string>
    <string name="mine_telephone">"0755-86962135"</string>

    <string name="evalution_pre_normal">常规预评估</string>
    <string name="evalution_pre_quick">快速预评估</string>
    <string name="evalution_pre_status_notpass">驳回</string>
    <string name="evalution_pre_status_pass">进度列表</string>
    <string name="evalution_pre_status_local">未提交</string>

    <string name="evalution_car_type">车型</string>

    <string name="select_car_model">请选择品牌车型</string>
    <string name="select_car_time">请选择上牌时间</string>
    <string name="select_car_licheng">请输入</string>
    <string name="select_car_licheng_unit">公里</string>
    <string name="select_car_city">请选择上牌城市</string>
    <string name="select_car_color">请输入车颜色</string>

    <string name="title_car_time">上牌时间</string>
    <string name="title_car_licheng">行驶里程</string>
    <string name="title_car_city">选择城市</string>
    <string name="title_car_type">品牌车型</string>
    <string name="title_car_color">车颜色</string>
    <string name="title_mark">备注输入</string>
    <string name="title_mark_1">备注</string>


    <string name="select_city">选择城市</string>

    <string name="select_car_date">选择上牌时间</string>
    <string name="finish">完成</string>
    <string name="car_time">%1$s年%2$s月</string>
    <string name="no_select_cartype">请选择车型</string>
    <string name="no_select_color">请输入车颜色</string>
    <string name="no_select_date">请选择上牌时间</string>
    <string name="no_select_licheng">请输入里程</string>
    <string name="no_select_city">请选择城市</string>
    <string name="submit_precallbill_success">请去预评估状态里面查看进度</string>
    <string name="html_title">网页浏览</string>


    <string name="preevaluation_base_title">基础照片</string>
    <string name="preevaluation_supplement_title">补充照片</string>


    <string name="coming_soon">敬请期待...</string>


    <string name="html_title_banner">活动详情</string>
    <string name="html_title_news">新闻详情</string>
    <string name="html_title_report">报告详情</string>

    <string name="submit_evaluation">提交正式评估</string>
    <string name="show_evaluation">查看正式评估</string>
    <string name="submit_evaluation_title">请稍候</string>
    <string name="show_evaluation_waiting">正在跳转正式评估单</string>
    <string name="submit_evaluation_waiting">正在提交正式评估中，请稍后</string>
    <string name="submit_evaluation_failed">提交正式评估失败！</string>

    <!--more news-->
    <string name="more_news">所有新闻</string>
    <string name="news_time">时间：%1$s</string>

    <!--kefu -->
    <string name="system_is_regist">系统正在自动为您注册用户...</string>
    <string name="is_contact_customer">正在联系客服，请稍等...</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="register_user_fail">注册用户失败</string>

    <string name="uploading_no_action">正在上传中,不能修改</string>
    <string name="jump_to_evaluation">正在加载，请稍候</string>

    <string name="status_process">状态:</string>
    <string name="uploading_status">正在上传</string>
    <string name="waiting_status">排队中</string>
    <string name="saving_status">已保存</string>


    <string name="waring_title">警告</string>
    <string name="waring_content">切换账号将清除原账号的所有本地数据(包括正在上传，但还没上传完的图片)，线上的不受影响</string>

    <string name="reason_attach_list">附件列表</string>
    <string name="reason_attach">查看附件</string>
</resources>
