<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_avatar_login" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/login_button"
        android:text="@string/login_btn_text"
        android:textColor="@color/bg_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/login_edtPwd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btnLogin"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp">

        <EditText
            android:id="@+id/login_edtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:hint="@string/pwd_txt_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"
            android:textColorHint="#999999"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/show_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:button="@drawable/checkbox_style" />

    </RelativeLayout>


    <EditText
        android:id="@+id/login_edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_edtPwd_container"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/login_input"
        android:ems="10"
        android:hint="@string/id_txt_hint"
        android:maxLines="1"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColorHint="#999999"
        android:textSize="18sp">

        <requestFocus />
    </EditText>

</RelativeLayout>