<?xml version="1.0" encoding="utf-8"?>
<com.smona.app.xiniu.ui.evaluation.EvaluationLayer xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        layout="@layout/fragment_header" />

    <LinearLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/uncommit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/uncommit">

                <TextView
                    android:id="@+id/tv_uncommit"
                    style="@style/evalutionlayer_per_count_text"
                    android:text="@string/bill_count" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/auditing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/auditing">

                <TextView
                    android:id="@+id/tv_auditing"
                    style="@style/evalutionlayer_per_count_text"
                    android:text="@string/bill_count" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/notpass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/notpass">

                <TextView
                    android:id="@+id/tv_notpass"
                    style="@style/evalutionlayer_per_count_text"
                    android:text="@string/bill_count" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/pass">

                <TextView
                    android:id="@+id/tv_pass"
                    style="@style/evalutionlayer_per_count_text"
                    android:text="@string/bill_count" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/status"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:id="@+id/notice_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/notice" />

        <TextView
            android:id="@+id/notice_detail"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/notice_detail"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notice_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/notice_img"
            android:layout_toStartOf="@+id/notice_detail"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/evalution_container"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/notice"
        android:layout_marginTop="10dp"
        android:background="@color/bg_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/queryVin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/carquery"
            android:gravity="center_horizontal"
            android:text="@string/evalution_query_vin"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/preEvalution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/preevalution"
            android:gravity="center_horizontal"
            android:text="@string/evalution_pre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/evalution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/evalution"
            android:gravity="center_horizontal"
            android:text="@string/evalution_start"
            android:textSize="18sp" />

    </LinearLayout>

</com.smona.app.xiniu.ui.evaluation.EvaluationLayer>